<resources>
    <string name="app_name">Wisata Kebumen</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="full_name">Im Yoona</string>
    <string name="profile_settings">Profile</string>
    <string name="welcome_message">Welcome to Wisata Kebumen</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="profile_name">Im Yoona</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_facebook_login">Facebook</string>
    <string name="btn_google_login">Google</string>
    <string name="gmaps_api_key">AIzaSyBOxThNkhxBOt1B8MrSYTxb2jqC0yd2dNs</string>
    <string name="maps_direction_api_key">AIzaSyDqJi1Z6Dkx0YWCoPwqIhavyDsLQvx7JjA</string>
    <string name="show_maps">Show Maps</string>
    <string name="fragment_destination_title">Spot List</string>
    <string name="item_title">Destination Title</string>
    <string name="item_desc">Destination Description</string>
    <string name="button_visit">Visit</string>
    <string name="show_destination">All Spot</string>
    <string name="show_about">About</string>
    <string name="about_app">
        Wisata Kebumen application is an app that were made based on a need of people who want to visit so many attraction spot in kebumen, with this app existence we hope it can help people to reach their destination easily. You can view the list of destination and use google maps navigation to help you found the place. Not only that, but you can also contribute to this app by adding more spot through contribute menu.
    </string>
    <string name="show_help">Help</string>
    <string name="help">
        1. Open Wisata Kebumen App then register if you have not ben registered, and then login with your credentials.
        2. On Home screen, click on All Spot menu. You will be directed to a new screen which will show you the list of destination.
        3. Coose one destination that you like by touching the screen on the related destination. From this screen you can directly navigate to the destination by click on the Visit menu.
        4. You will see the detail of the destination that you choose before. From here you can see the description and the maps of the location.
        5. If click the visit menu, then the new screen will appear, you will see a maps navigation app which will guide you towards your destination.
        6. Enjoy your visit.
    </string>
    <string name="show_myspot">My Spot</string>
    <string name="contribute">Contribute</string>
    <string name="facebook_app_id">435107117009773</string>
    <string name="fb_login_protocol_scheme">fb435107117009773</string>
    <string name="show_home">Home</string>

</resources>
