<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/login"-->
            <!--android:title="@string/login"-->
            <!--android:icon="@drawable/ic_person_black_24dp"-->
            <!--android:iconTint="@android:color/white"-->
            <!--android:iconTintMode="src_in"/>-->
        <!--<item-->
            <!--android:id="@+id/register"-->
            <!--android:title="@string/register"-->
            <!--android:icon="@drawable/ic_person_add_black_24dp"-->
            <!--android:iconTint="@android:color/white"-->
            <!--android:iconTintMode="src_in"/>-->

        <item
            android:id="@+id/profile_settings"
            android:title="@string/profile_settings"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:iconTint="@android:color/white"
            android:iconTintMode="src_in"/>

        <item
            android:id="@+id/show_destination"
            android:title="@string/show_destination"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:iconTint="@color/white"
            android:iconTintMode="src_in"/>

        <!--<item
            android:id="@+id/show_maps"
            android:title="@string/show_maps"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:iconTint="@android:color/white"
            android:iconTintMode="src_in"/>-->

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:iconTint="@android:color/white"
            android:iconTintMode="src_in"/>
    </group>dadadasnoopdogdadadasnoopdog

</menu>