<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cards_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/md_keyline"
    android:layout_marginRight="@dimen/md_keyline"
    android:layout_marginLeft="@dimen/md_keyline"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cards_image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/a"/>

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cards_title_height"
            android:layout_alignBottom="@+id/card_image"
            android:layout_marginLeft="@dimen/md_keyline"
            tools:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_image"
            android:layout_margin="@dimen/md_keyline"
            tools:text="@string/item_desc"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"/>

        <Button
            android:id="@+id/visit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_text"
            style="?android:borderlessButtonStyle"
            android:textColor="?attr/colorPrimary"
            android:text="@string/button_visit"/>

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginRight="@dimen/md_keyline"
            app:srcCompat="@drawable/ic_location_on_black_24dp"
            android:layout_below="@id/card_text"
            android:layout_alignParentRight="true"
            style="?android:borderlessButtonStyle"
            android:tint="@color/button_grey"/>

        <ImageButton
            android:id="@+id/favourite_button"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_marginRight="@dimen/md_keyline"
            app:srcCompat="@drawable/ic_favorite_black_24dp"
            android:layout_below="@id/card_text"
            android:layout_toLeftOf="@+id/location_button"
            style="?android:borderlessButtonStyle"
            android:tint="@color/button_grey"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</android.support.v7.widget.CardView>